[gd_scene load_steps=14 format=2]

[ext_resource path="res://Textures/EasterHead.png" type="Texture" id=1]
[ext_resource path="res://Title/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/Action RPG Resources/World/GrassBackground.png" type="Texture" id=3]
[ext_resource path="res://Title/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Title/TitleScreen.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="TitleScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
margin_left = -19.0
margin_top = 1.0
margin_right = 336.0
margin_bottom = 186.0

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 332, 182 )

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="menu"]
margin_right = 240.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="menu/Logo"]
position = Vector2( 152, 69 )
frames = SubResource( 8 )
frame = 9
playing = true

[node name="centreRow" type="HBoxContainer" parent="menu"]
margin_top = 4.0
margin_right = 240.0
margin_bottom = 144.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="menu/centreRow"]
margin_right = 240.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" parent="menu/centreRow/Buttons" instance=ExtResource( 2 )]
shortcut_in_tooltip = false
flat = false
scene_to_load = "res://world.tscn"

[node name="Label" parent="menu/centreRow/Buttons/Start" index="0"]
text = "Start"

[node name="Label" type="Label" parent="menu/centreRow/Buttons"]
margin_top = 24.0
margin_right = 240.0
margin_bottom = 140.0
text = "
Credits:

Art: Kayley
Music: Adam
Programming: Dane
"
autowrap = true

[node name="Label" type="Label" parent="."]
margin_left = 102.0
margin_top = 6.0
margin_right = 235.0
margin_bottom = 24.0
text = "L O S T    W O O D S"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="button_down" from="menu/centreRow/Buttons/Start" to="." method="_on_Start_button_down"]

[editable path="FadeIn"]

[editable path="menu/centreRow/Buttons/Start"]
